# filename-normalizer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
features/: process_files.py
features/files_with_dates/: __init__.py  parse.py  process.py  remove_date_patterns.py  scan.py  summary.py
features/files_with_no_dates/: analyze_pdf_content.py  extract_text_from_pdf.py  extract_text_from_pdf_with_pypdf2.py  find_date_in_pdf.py  get_date_from_pdf.py  get_date_from_pdf_with_openai.py  get_date_from_text.py  get_date_from_text_with_openai.py
utils/: __init__.py  generate_new_filename.py  logger.py  scan_directory.py  summary.py  types.py
