[project]
name = "filename-normalizer"
version = "0.1.0"
description = "A command-line tool to automatically detect and standardize date patterns in filenames"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.86.0",
    "pypdf2>=3.0.1",
    "rich>=13.7.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]

[tool.uv.workspace]
members = [
    "test",
]
